--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Passwords#edit</h1>
-<p>Find me in app/views/passwords/edit.html.erb</p>
+<% @page_title = "パスワードの変更" %>
+<h1><%= @page_title %></h1>
+
+<div class="toolbar"><%= link_to "マイアカウントに戻る", :account %></div>
+
+<%= form_for @member, as: "account", url: :password do |form| %>
