--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
 <nav class="menubar">
   <ul>
     <%= link_to "TOP", :root %>
-    <%= link_to "ニュース", "#" %>
+    <%= link_to "ニュース", :articles %>
     <%= link_to "ブログ", "#" %>
     <% if current_member %>
     <%= link_to "会員名簿", :members %>
