--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,11 +1,15 @@
 <%= render "shared/login_form" unless current_member %>
 
 <h2>最新ニュース</h2>
-<ul>
-  <% 5.times do |i| %>
-  <li><%= link_to "ニュースの見出し", "#" %></li>
-  <% end %>
-</ul>
+  <%
+    articles = Article.visible.order(relesed_at: :desc).limit(5)
+    articles = articles.open_to_the_public unless current_member
+  %>
+  <ul>
+    <% articles.each do |article| %>
+    <li><%= link_to article.title, article %></li>
+    <% end %>
+  </ul>
 
 <h2>会員のブログ</h2>
 <ul>
