--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,8 +10,8 @@
     <td><%= form.text_area :body, rows: 10, cols: 45 %></td>
   </tr>
   <tr>
-    <th><%= form.label :relesed_at, for: "article_relesed_at_1i" %></th>
-    <td><%= form.datetime_select :relesed_at,
+    <th><%= form.label :released_at, for: "article_released_at_1i" %></th>
+    <td><%= form.datetime_select :released_at,
               start_year: 2000, end_year: Time.current.year + 1,
               use_month_numbers: true %></td>
   </tr>
