--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,7 +16,7 @@
   </tr>
   <tr>
     <th>掲載開始日時</th>
-    <td><%= @article.relesed_at.strftime("%Y/%m/%d %H:%M") %></td>
+    <td><%= @article.released_at.strftime("%Y/%m/%d %H:%M") %></td>
   </tr>
   <tr>
     <th>掲載終了日時</th>
