--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
   <ul>
     <%= link_to "TOP", :root %>
     <%= link_to "ニュース", :articles %>
-    <%= link_to "ブログ", "#" %>
+    <%= link_to "ブログ", :entries %>
     <% if current_member %>
     <%= link_to "会員名簿", :members %>
     <%= link_to "管理ページ", "#" %>
