--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,7 +2,7 @@
 
 <h2>最新ニュース</h2>
   <%
-    articles = Article.visible.order(relesed_at: :desc).limit(5)
+    articles = Article.visible.order(released_at: :desc).limit(5)
     articles = articles.open_to_the_public unless current_member
   %>
   <ul>
