--- a/app/assets/stylesheets/pagination.scss
+++ b/app/assets/stylesheets/pagination.scss
@@ -1,10 +1,12 @@
+$border-color: #499;
+
 nav.pagination {
   font-size: 75%;
   padding: 4px 8px;
-  border: 1px solid #499;
+  border: 1px solid $border-color;
   word-spacing: 4px;
-}
 
-nav.pagination span.current {
+ span.current {
   font-weight: bold;
+  }
 }
