--- a/app/assets/stylesheets/table.css
+++ b/app/assets/stylesheets/table.css
@@ -1,27 +1,28 @@
 /* 表：一覧表示、詳細表示 */
-@mixin data-table {
+table.list, table.attr {
   font-size: 90%;
-  width: 100%;
-
-  th {
-    background-color: #499;
-    color: white;
-    font-weight: normal;
-  }
-  td, th {
-    padding: 4px;
-  }
-  td {
-    background-color: #cee;
-  }
+  width: 60%;
 }
 
-table.list {
-  @include data-table;
-  th { text-align: left; }
+table.list th, table.attr th {
+  background-color: #499;
+  color: white;
+  font-weight: normal;
 }
 
-table.attr {
-  @include data-table;
-  th { text-align: right; }
+table.list td, table.list th,
+table.attr td, table.attr th {
+  padding: 4px;
+}
+
+table.list th {
+  text-align: left;
+}
+
+table.attr th {
+  text-align: right;
+}
+
+table.list td, table.attr td {
+  background-color: #cee;
 }
