--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "logo.gif", size:"272x48", alt: "Morning Glory" %>
+<%= link_to image_tag("logo.gif", size:"272x48", alt: "Morning Glory"), "/" %>
 
 <% if current_member %>
   <ul class="account-menu">
