--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,6 +8,15 @@
   </ul>
 <% end %>
 
+<%=
+  if controller.kind_of?(Admin::Base)
+    render "shared/admin_menubar"
+  else
+    render "shared/menubar"
+  end
+%>
+
+
 <nav class="menubar">
   <ul>
     <%= link_to "TOP", :root %>
